<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Item name"
        />
    <EditText
        android:id="@+id/name_new_available_item_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_item_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Item title"
        />
    <EditText
        android:id="@+id/title_new_available_item_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_item_title"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Full description"
        />
    <EditText
        android:id="@+id/full_description_new_available_item_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/add_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="add photo"/>
    <ImageView
        android:id="@+id/preview_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp" />
    <Button
        android:id="@+id/create_available_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create_available_item_text"/>


</LinearLayout>